fixed errors w linting